having media query issues: on iPhone X: title is being set to iphone 6/7/8 on iPhone X: cardContainer is being set to iphone 6/7/8 on iPhone X: single & double set to iphone 6/7/8 on iPad: title is being set to iphoneX on iPad: cardContainer is set to iphoneX on iPad: single & double set to iphoneX

--- a/style.css
+++ b/style.css
@@ -171,12 +171,17 @@ main {
   width: 10%;
   border-radius: 15px;
   margin: 0% 2%;
-  /* opacity: 1;
-  transition: opacity 2s; */
 }
-/* .gifContainer.fade {
+#quotes, #author {
+  opacity: 0;
+  transition: opacity 2s;
+}
+#author.fade {
   opacity: 1;
-} */
+}
+#quotes.fade {
+  opacity: 1;
+}
 .gifSize {
   height: 100%;
   width: 100%;
